# zuck-agent

./: .env.example  .gitignore  CLAUDE.md  PREVIEW_IMPLEMENTATION_CONTRACT.md  README.md  package.json  pyproject.toml
.claude/: settings.local.json
data/: .gitkeep
frontend/: index.html  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
scripts/: backup_db.sh  com.zurk.agent-center.plist  com.zurk.backup.plist  com.zurk.healthcheck.plist  demo.sh  generate_icons.mjs  healthcheck.sh  init_db.py  install.sh  install_service.sh  release.sh  setup_tailscale.sh  setup_tunnel.sh  start.sh  verify_sdk.py  zurk
src/: __init__.py  config.py  logging_config.py  main.py
src/api/: app.py  deps.py  schemas.py  security.py
src/core/: __init__.py  agent_runtime.py  approval_handler.py  constants.py  exceptions.py  project_registry.py  session_manager.py  types.py
src/models/: __init__.py  base.py  message.py  project.py  session.py
src/services/: __init__.py  agent_orchestrator.py  message_mapper.py  preview_manager.py
src/utils/: diff_generator.py  project_detector.py  session_discovery.py  session_reader.py
tests/: __init__.py  conftest.py  test_agent_runtime.py  test_approval_handler.py  test_diff_generator.py  test_models.py  test_preview_manager.py  test_project_detector.py  test_project_registry.py  test_session_discovery.py  test_session_manager.py  test_session_reader.py
tests/test_api/: test_filesystem.py  test_projects.py  test_sessions.py
(+44 files in other folders)
